// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dialog examples NovaConfirmationDialogComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="primary"
    class="v-button"
    type="button"
    v-button=""
  >
    Open confirmation dialog
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-dialog-default"
    id="a-v-dialog-0"
    messagetype="information"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="a-v-dialog-0-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <svg
            aria-hidden="false"
            aria-label="Information"
            class="v-message-icon v-icon v-icon-information v-icon-low v-icon-visa"
            focusable="false"
            height="24"
            role="img"
            v-icon-visa-information-low=""
            v-message-icon=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-secondary"
              d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
            />
            <path
              class="v-icon-primary"
              d="M13.4121 17.0352H15V19H9V17.0352H11.4512V12.9873H9.43164V11.0225H13.4121V17.0352ZM12 5C13.2549 5 14.2646 6.02181 14.2646 7.26953C14.2646 8.51722 13.2549 9.53906 12 9.53906C10.7549 9.53906 9.73538 8.51722 9.73535 7.26953C9.73535 6.02181 10.7549 5 12 5ZM12 6.96484C11.8333 6.96484 11.6963 7.10251 11.6963 7.26953C11.6963 7.43652 11.8334 7.57422 12 7.57422C12.1666 7.57422 12.3037 7.43652 12.3037 7.26953C12.3037 7.10251 12.1667 6.96484 12 6.96484Z"
            />
            <defs>
              <clippath>
                <rect
                  height="24"
                  width="24"
                />
              </clippath>
            </defs>
          </svg>
          <span>
            Confirmation title 1
          </span>
        </h2>
        <p
          id="a-v-dialog-0-description"
          v-dialog-text=""
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            autofocus=""
            buttoncolor="primary"
            class="v-button"
            type="button"
            v-button=""
          >
            Primary action
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-close-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-primary"
            d="M23 22.6108L12.8896 12.5005L23 2.39014L21.6104 1.00049L11.5 11.1108L1.38965 1.00049L0 2.39014L10.1104 12.5005L0 22.6108L1.38965 24.0005L11.5 13.8901L21.6104 24.0005L23 22.6108Z"
          />
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
  <dialog
    aria-describedby="custom-dialog-description"
    aria-labelledby="custom-dialog-title"
    aria-modal="true"
    class="v-dialog v-message v-message-warning"
    id="custom-dialog"
    messagetype="warning"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="custom-dialog-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <svg
            aria-hidden="false"
            aria-label="Warning"
            class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
            focusable="false"
            height="24"
            role="img"
            v-icon-visa-warning-low=""
            v-message-icon=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-secondary"
              d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
            />
            <path
              class="v-icon-primary"
              d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
            />
          </svg>
          <span>
            Confirmation title 2
          </span>
        </h2>
        <p
          id="custom-dialog-description"
          v-dialog-text=""
        >
          Are you sure you want to close all dialogs?
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            autofocus=""
            buttoncolor="primary"
            class="v-button"
            type="button"
            v-button=""
          >
            Close all dialogs
          </button>
          <button
            buttoncolor="secondary"
            class="v-button v-button-secondary"
            type="button"
            v-button=""
          >
            Cancel
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-close-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;

exports[`Dialog examples NovaDefaultDialogComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="primary"
    class="v-button"
    type="button"
    v-button=""
  >
    Open default dialog
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-dialog-default"
    id="a-v-dialog-0"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header"
          id="a-v-dialog-0-title"
          v-dialog-header=""
        >
          <span>
            Default title
          </span>
        </h2>
        <p
          id="a-v-dialog-0-description"
          v-dialog-text=""
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            autofocus=""
            buttoncolor="primary"
            class="v-button"
            type="button"
            v-button=""
          >
            Primary action
          </button>
          <button
            buttoncolor="secondary"
            class="v-button v-button-secondary"
            type="button"
            v-button=""
          >
            Secondary action
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-close-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;

exports[`Dialog examples NovaErrorDialogComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="primary"
    class="v-button"
    type="button"
    v-button=""
  >
    Open error dialog
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-message-error"
    id="a-v-dialog-0"
    messagetype="error"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="a-v-dialog-0-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <svg
            aria-hidden="false"
            aria-label="Error"
            class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
            focusable="false"
            height="24"
            role="img"
            v-icon-visa-error-low=""
            v-message-icon=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-secondary"
              d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
            />
            <path
              class="v-icon-primary"
              d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
            />
            <defs>
              <clippath>
                <rect
                  height="24"
                  width="24"
                />
              </clippath>
            </defs>
          </svg>
          <span>
            Error title
          </span>
        </h2>
        <p
          id="a-v-dialog-0-description"
          v-dialog-text=""
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            autofocus=""
            buttoncolor="primary"
            class="v-button"
            type="button"
            v-button=""
          >
            Primary action
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-close-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;

exports[`Dialog examples NovaSuccessDialogComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="primary"
    class="v-button"
    type="button"
    v-button=""
  >
    Open success dialog
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-message-success"
    id="a-v-dialog-0"
    messagetype="success"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="a-v-dialog-0-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <svg
            aria-hidden="false"
            aria-label="Success"
            class="v-message-icon v-icon v-icon-low v-icon-success v-icon-visa"
            focusable="false"
            height="24"
            role="img"
            v-icon-visa-success-low=""
            v-message-icon=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-secondary"
              d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
            />
            <path
              class="v-icon-primary"
              d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
            />
            <defs>
              <clippath>
                <rect
                  height="24"
                  width="24"
                />
              </clippath>
            </defs>
          </svg>
          <span>
            Success title
          </span>
        </h2>
        <p
          id="a-v-dialog-0-description"
          v-dialog-text=""
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            autofocus=""
            buttoncolor="primary"
            class="v-button"
            type="button"
            v-button=""
          >
            Primary action
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-close-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;

exports[`Dialog examples NovaTouringTipsDialogComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="primary"
    class="v-button"
    type="button"
    v-button=""
  >
    Open touring tips dialog
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-dialog-default"
    id="a-v-dialog-0"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="a-v-dialog-0-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <h2>
            Touring tips title
          </h2>
        </h2>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-pb-8"
          valignitemscenter=""
          vflex=""
          vflexrow=""
          vgap="8"
          vpb="8"
        >
          <div
            class="v-align-items-center v-flex v-flex-row v-justify-content-center v-typography-subtitle-2"
            style="background-color: var(--palette-default-surface-highlight); block-size: 36px; inline-size: 36px; border-radius: var(--size-rounded-pill);"
            valignitemscenter=""
            vflex=""
            vjustifycontentcenter=""
            vtypography="subtitle-2"
          >
             2 
          </div>
          <p
            class="v-typography-body-2-bold"
            id="a-v-dialog-0-description"
            v-dialog-text=""
            vtypography="body-2-bold"
          >
            Touring tips instructions
          </p>
        </div>
        <p
          class="v-typography-body-2"
          vtypography="body-2"
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-between v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentbetween=""
          vpt="16"
        >
          <p>
            2 of 4
          </p>
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-end v-pt-16"
            valignitemscenter=""
            vflex=""
            vflexwrap=""
            vgap="8"
            vjustifycontentend=""
            vpt="16"
          >
            <button
              buttoncolor="secondary"
              class="v-button v-button-secondary"
              type="button"
              v-button=""
            >
              Previous
            </button>
            <button
              autofocus=""
              buttoncolor="primary"
              class="v-button"
              type="button"
              v-button=""
            >
              Next
            </button>
          </div>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-close-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;

exports[`Dialog examples NovaWarningDialogComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="primary"
    class="v-button"
    type="button"
    v-button=""
  >
    Open warning dialog
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-message-warning"
    id="a-v-dialog-0"
    messagetype="warning"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="a-v-dialog-0-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <svg
            aria-hidden="false"
            aria-label="Warning"
            class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
            focusable="false"
            height="24"
            role="img"
            v-icon-visa-warning-low=""
            v-message-icon=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-secondary"
              d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
            />
            <path
              class="v-icon-primary"
              d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
            />
          </svg>
          <span>
            Warning title
          </span>
        </h2>
        <p
          id="a-v-dialog-0-description"
          v-dialog-text=""
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            autofocus=""
            buttoncolor="primary"
            class="v-button"
            type="button"
            v-button=""
          >
            Primary action
          </button>
        </div>
      </div>
      <button
        aria-label="close"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-ml-12 -v-mr-18 -v-mt-20"
        subtle=""
        type="button"
        v-button-icon=""
        vml="-12"
        vmr="-18"
        vmt="-20"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-close v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-close-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;

exports[`Dialog examples NovaWithoutCloseButtonDialogComponent should render correctly 1`] = `
<div>
  <button
    class="v-button"
    type="button"
    v-button=""
  >
    Open dialog without close icon
  </button>
  <dialog
    aria-describedby="a-v-dialog-0-description"
    aria-labelledby="a-v-dialog-0-title"
    aria-modal="true"
    class="v-dialog v-message v-message-error"
    id="a-v-dialog-0"
    messagetype="error"
    role="dialog"
    v-dialog=""
    v-message=""
  >
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
    <div
      cdktrapfocus=""
      cdktrapfocusautocapture=""
      class="v-flex v-flex-row"
      vflex=""
      vflexrow=""
    >
      <div
        class="v-message-content v-pb-2 v-pr-2"
        v-message-content=""
        vpb="2"
        vpr="2"
      >
        <h2
          class="v-dialog-header v-gap-6 v-align-items-center v-flex v-flex-row v-justify-content-start"
          id="a-v-dialog-0-title"
          v-dialog-header=""
          valignitemscenter=""
          vflex=""
          vgap="6"
          vjustifycontentstart=""
        >
          <svg
            aria-hidden="false"
            aria-label="Error"
            class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
            focusable="false"
            height="24"
            role="img"
            v-icon-visa-error-low=""
            v-message-icon=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-secondary"
              d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
            />
            <path
              class="v-icon-primary"
              d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
            />
            <defs>
              <clippath>
                <rect
                  height="24"
                  width="24"
                />
              </clippath>
            </defs>
          </svg>
          <span>
            Error title
          </span>
        </h2>
        <p
          id="a-v-dialog-0-description"
          v-dialog-text=""
        >
          This is required text that describes the dialog title in more detail.
        </p>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-start v-pt-16"
          valignitemscenter=""
          vflex=""
          vflexwrap=""
          vgap="8"
          vjustifycontentstart=""
          vpt="16"
        >
          <button
            class="v-button"
            type="button"
            v-button=""
          >
            Primary action
          </button>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="cdk-visually-hidden cdk-focus-trap-anchor"
      tabindex="0"
    />
  </dialog>
</div>
`;
